# siim-isic-melanoma-classification

./: .gitignore  config.yml  ensemble.py  pyproject.toml  submission.csv  train.py  tt.py
notebook/: remove_label.ipynb
src/: datasets.py  lightning.py  losses.py  models.py  transforms.py  utils.py
submission/: ensemble_submission.csv  submission_all_enet_b2_111_192.csv  submission_all_enet_b2_11_192.csv  submission_all_enet_b2_1_192.csv
